-Djava.version=17
-Dmaven.compiler.source=17
-Dmaven.compiler.target=17
-Dmaven.compiler.release=17
-Dmaven.compiler.compilerVersion=17
-Dfile.encoding=UTF-8
-Dmaven.compiler.debug=true
-Dmaven.compiler.debuglevel=lines,vars,source
--illegal-access=permit
-Dmaven.compiler.executable=javac
-Dmaven.compiler.fork=true
-Dmaven.compiler.verbose=true
-Dmaven.compiler.showWarnings=true
-Dmaven.compiler.failOnError=true
-Dmaven.compiler.forceJavacCompilerUse=true
-Dmaven.compiler.testSource=17
-Dmaven.compiler.testTarget=17
-Dmaven.compiler.testRelease=17
-DcompilerVersion=17
-Dcompiler=javac
-Djava.specification.version=17
-Djava.runtime.version=17
-Djava.vm.specification.version=17
-DJAVA_VERSION=17
-DJDK_VERSION=17
--settings .mvn/settings.xml
--activate-profiles force-java-17